Refac: foreach to stream